Fix spacing in title, some colors

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(78, 31, 45, 0.5);
 }
 
 h1 {
@@ -10,6 +10,10 @@ h2, p {
   font-family: 'Lato', sans-serif;
 }
 
+h2 {
+  line-height: 100%;
+}
+
 a {
   color: #F06292;
 }
@@ -18,7 +22,7 @@ a {
   margin-top: 200px;
   padding: 20px;
   background-color: #fff;
-  box-shadow: 8px 8px 10px #F06292; 
+  box-shadow: 8px 8px 10px #481d2b; 
 }
 
 #info {
